--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,9 +2,13 @@
 
 name: Manual workflow
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
+  workflow_call:
+    inputs:
+      name:
+        type: string
+        default: someone
+
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
@@ -18,15 +22,20 @@ on:
         # The data type of the input
         type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   greet:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ inputs.name }}"
+    - name: Send greeting again!
+      run: echo "Hello ${{ inputs.name }}"
+
+  byebye:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Send bye
+      run: echo "Bye ${{ inputs.name }}"
+
+    - name: Send bye again!
+      run: echo "Bye ${{ inputs.name }}"
