--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,6 +39,26 @@ jobs:
       - call-foo
       - call-bar
 
+
+
+  get-versions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: List things
+        run: |
+          echo 'FILE_LIST<<EOF'
+          ls -al /etc
+          echo 'EOF'
+    outputs:
+      THE_LIST:
+
+  show-versions:
+    runs-on: ubuntu-latest
+    - name: List things
+      run: |
+        echo "FILE_LIST is ${{ steps.get-versions.outputs.FILE_LIST }}"
+
+
   call-foo:
     uses: ./.github/workflows/manual.yml
     with:
@@ -54,3 +74,28 @@ jobs:
       name: bar
     needs:
       - call-foo
+
+  job1:
+    runs-on: ubuntu-latest
+    # Map a step output to a job output
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
+    steps:
+      - id: step1
+        run: |
+          ls -al "$GITHUB_OUTPUT"
+          echo "test=hello" >> "$GITHUB_OUTPUT"
+      - id: step2
+        run: |
+          ls -al "$GITHUB_OUTPUT"
+          echo "test=world" >> "$GITHUB_OUTPUT"
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - env:
+          OUTPUT1: ${{needs.job1.outputs.output1}}
+          OUTPUT2: ${{needs.job1.outputs.output2}}
+        run: echo "$OUTPUT1 $OUTPUT2"
