--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,24 +39,22 @@ jobs:
       - call-foo
       - call-bar
 
+  # get-versions:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: List things
+  #       run: |
+  #         echo 'FILE_LIST<<EOF'
+  #         ls -al /etc
+  #         echo 'EOF'
+  #   outputs:
+  #     THE_LIST:
 
-
-  get-versions:
-    runs-on: ubuntu-latest
-    steps:
-      - name: List things
-        run: |
-          echo 'FILE_LIST<<EOF'
-          ls -al /etc
-          echo 'EOF'
-    outputs:
-      THE_LIST:
-
-  show-versions:
-    runs-on: ubuntu-latest
-    - name: List things
-      run: |
-        echo "FILE_LIST is ${{ steps.get-versions.outputs.FILE_LIST }}"
+  # show-versions:
+  #   runs-on: ubuntu-latest
+  #   - name: List things
+  #     run: |
+  #       echo "FILE_LIST is ${{ steps.get-versions.outputs.FILE_LIST }}"
 
 
   call-foo:
