--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,12 +45,12 @@ jobs:
       - name: List things
         id: list
         run: |
+          hostname -f && pwd && ls -al
           {
             echo 'FILE_LIST<<EOF'
             ls -al /etc | tee TESTFILE
             echo 'EOF'
           } >> "$GITHUB_OUTPUT"
-          pwd && ls -al
     outputs:
       THE_LIST: ${{ steps.list.outputs.FILE_LIST }}
 
@@ -61,7 +61,7 @@ jobs:
     steps:
       - name: List things
         run: |
-          pwd && ls -al
+          hostname -f && pwd && ls -al
           echo "FILE_LIST is TESTFILE"
 
 
@@ -90,10 +90,12 @@ jobs:
     steps:
       - id: step1
         run: |
+          hostname -f && pwd && ls -al
           ls -al "$GITHUB_OUTPUT"
           echo "test=hello" >> "$GITHUB_OUTPUT"
       - id: step2
         run: |
+          hostname -f && pwd && ls -al
           ls -al "$GITHUB_OUTPUT"
           echo "test=world" >> "$GITHUB_OUTPUT"
 
@@ -104,4 +106,6 @@ jobs:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
           OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2"
+        run: |
+          hostname -f && pwd && ls -al
+          echo "$OUTPUT1 $OUTPUT2"
