--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,6 +45,7 @@ jobs:
       - name: List things
         id: list
         run: |
+          echo runner.name is ${{ runner.name }}
           hostname -f && pwd && ls -al
           {
             echo 'FILE_LIST<<EOF'
@@ -61,6 +62,7 @@ jobs:
     steps:
       - name: List things
         run: |
+          echo runner.name is ${{ runner.name }}
           hostname -f && pwd && ls -al
           echo "FILE_LIST is: ${{ needs.get-versions.outputs.THE_LIST }}"
 
