--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,6 +34,7 @@ jobs:
 
   byebye:
     runs-on: ubuntu-latest
+    needs: greet
     steps:
     - name: Send bye
       run: echo "Bye ${{ inputs.name }}"
