--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -77,7 +77,7 @@ jobs:
     needs:
       - get-versions
     with:
-      name: foo
+      name: foo-${{ matrix.version }}
     strategy:
       matrix:
         version: ${{ fromJson(needs.get-versions.outputs.THE_LIST) }}
